--- a/html/build.gradle
+++ b/html/build.gradle
@@ -41,6 +41,7 @@ dependencies {
   implementation project(':core')
   implementation("com.badlogicgames.gdx:gdx-box2d-gwt:$gdxVersion:sources") {exclude group: "com.google.gwt", module: "gwt-user"}
 
+  implementation "com.github.RedSponge:ldtk-gdx:v0.2:sources"
 }
 
 import org.akhikhl.gretty.AppBeforeIntegrationTestTask
