--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,6 +9,8 @@ dependencies {
   api "com.github.tommyettinger:libgdx-utils:0.13.7"
   api "com.github.tommyettinger:libgdx-utils-box2d:0.13.7"
 
+  implementation 'com.google.code.gson:gson:2.11.0'
+
   compileOnly 'org.projectlombok:lombok:1.18.34'
   annotationProcessor 'org.projectlombok:lombok:1.18.34'
 
