--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,11 +8,13 @@ dependencies {
   api "com.github.tommyettinger:anim8-gdx:$anim8Version"
   api "com.github.tommyettinger:libgdx-utils:0.13.7"
   api "com.github.tommyettinger:libgdx-utils-box2d:0.13.7"
+  api "com.badlogicgames.gdx:gdx-ai:1.8.2"
 
   implementation 'com.google.code.gson:gson:2.11.0'
 
   compileOnly 'org.projectlombok:lombok:1.18.34'
   annotationProcessor 'org.projectlombok:lombok:1.18.34'
+
 
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
