--- a/html/build.gradle
+++ b/html/build.gradle
@@ -40,6 +40,7 @@ dependencies {
   implementation "com.github.tommyettinger:anim8-gdx:$anim8Version:sources"
   implementation project(':core')
   implementation("com.badlogicgames.gdx:gdx-box2d-gwt:$gdxVersion:sources") {exclude group: "com.google.gwt", module: "gwt-user"}
+  implementation "com.badlogicgames.gdx:gdx-ai:1.8.2:sources"
 }
 
 import org.akhikhl.gretty.AppBeforeIntegrationTestTask
